Correct references to LMS.

--- a/vignettes/powerNLSEM.Rmd
+++ b/vignettes/powerNLSEM.Rmd
@@ -73,7 +73,7 @@ y3~~.3*y3
 
 All parameters in the model are given by the user, otherwise `lavaan`'s defaults are used. These are `1` for variances, `0.5` for covariance and `0` for all other coefficients. Hence, not stating a coefficient will result in zero-effects for which the power is just the level of significance ($\alpha$ or the type-I error). 
 
-Interactions among latent variables have not yet been included into `lavaan` (version 0.6.13), which is why this is handeled by the `powerNLSEM` package by translating the syntax into syntax for which nonlinear models can be estimated. For now these are `LMS` (latent moderated structured equation, Klein & Moosbrugger, 2000), which needs an installation of `Mplus` (Muthén & Muthén, 1998-2017), `UPI` (unconstrained product indicator approach, Marsh et al., 2004, Kelava & Brandt, 2009), which further makes use of the `semTools` package (Jorgensen et al., 2022) to compute the product indicators in a matched or unmatched way (including different ways of centering the indicators), a factor score approach using the SL-method (named after Skrondal & Laake, 2001, as studied in Ng & Chang, 2020) and a scale mean regression based path analysis where the latent variables are collapsed to means of the indicators per latent variables and path analysis is used to fit the NLSEM.
+Interactions among latent variables have not yet been included into `lavaan` (version 0.6.13), which is why this is handeled by the `powerNLSEM` package by translating the syntax into syntax for which nonlinear models can be estimated. For now these are `LMS` (latent moderated structural equations, Klein & Moosbrugger, 2000), which needs an installation of `Mplus` (Muthén & Muthén, 1998-2017), `UPI` (unconstrained product indicator approach, Marsh et al., 2004, Kelava & Brandt, 2009), which further makes use of the `semTools` package (Jorgensen et al., 2022) to compute the product indicators in a matched or unmatched way (including different ways of centering the indicators), a factor score approach using the SL-method (named after Skrondal & Laake, 2001, as studied in Ng & Chang, 2020) and a scale mean regression based path analysis where the latent variables are collapsed to means of the indicators per latent variables and path analysis is used to fit the NLSEM.
 
 ```{r, echo = F}
 cat("# structural models
